fixed some more spacing issues

--- a/styles/larger.css
+++ b/styles/larger.css
@@ -24,6 +24,8 @@ ul{
 }
 li{
     display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
     float: left;
     padding: 1rem;
 
